--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,4 +7,9 @@
     </style>
 
     <style name="Theme.FilmSearch" parent="Base.Theme.FilmSearch" />
+
+    <declare-styleable name="RatingDonutView">
+        <attr name="progress" format="integer" />
+        <attr name="stroke" format="float" />
+    </declare-styleable>
 </resources>
